# graphic_exam

./: CMakeLists.txt  geomodeling.cpp  geomodeling.h  main.cpp  test1.cpp  test1.h
